[package]
name = "parachain-template-node"
authors = [ "Anonymous" ]
build = "build.rs"
description = "A Substrate node that demonstrates using the Nimbus consensus framework with instant seal and as a parachain."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/PureStake/cumulus/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "parachain-collator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.9", features = [ "derive" ] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
derive_more = "0.99.2"
flume = "0.10.9"
hex-literal = "0.3.1"
log = "0.4.17"
serde = { version = "1.0.119", features = [ "derive" ] }

# RPC related Dependencies
jsonrpsee = { version = "0.16.2", features = [ "macros", "server" ] }

# Local Dependencies
nimbus-consensus = { path = "../../nimbus-consensus" }
nimbus-primitives = { path = "../../nimbus-primitives" }
parachain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
frame-benchmarking-cli = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

pallet-transaction-payment-rpc = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

substrate-frame-rpc-system = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
substrate-prometheus-endpoint = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-chain-spec = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-cli = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-client-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-client-db = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-consensus = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-consensus-manual-seal = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-executor = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-keystore = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-network = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-network-sync = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-network-common = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-rpc = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-rpc-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-service = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-telemetry = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-tracing = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-transaction-pool = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sc-transaction-pool-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-block-builder = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
#sp-consensus = { git = "https://github.com/PureStake/substrate", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-inherents = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-keystore = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-offchain = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-session = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-timestamp = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }
sp-transaction-pool = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-client-collator = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-client-consensus-common = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-client-network = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-client-service = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-primitives-core = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-relay-chain-interface = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/PureStake/cumulus", branch = "moonbeam-polkadot-v0.9.40" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.40" }
polkadot-parachain = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.40" }
polkadot-primitives = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.40" }
polkadot-service = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.40" }
polkadot-test-service = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.40" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

[features]
runtime-benchmarks = [ "parachain-template-runtime/runtime-benchmarks", "polkadot-service/runtime-benchmarks", "polkadot-test-service/runtime-benchmarks" ]
try-runtime = [ "parachain-template-runtime/try-runtime" ]
