[package]
name = "parachain-template-runtime"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/cumulus/"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Local Dependencies
pallet-template = { path = "../pallets/template", default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-block-builder = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-inherents = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-offchain = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-session = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
sp-version = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/purestake/substrate", default-features = false, optional = true , branch = "elois-jsonrpsee" }
frame-executive = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-jsonrpsee" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
frame-system-benchmarking = { git = "https://github.com/purestake/substrate", default-features = false, optional = true , branch = "elois-jsonrpsee" }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }

## Substrate Pallet Dependencies
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
pallet-randomness-collective-flip = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
pallet-session = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
pallet-sudo = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
pallet-timestamp = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", default-features = false , branch = "elois-jsonrpsee" }

# Cumulus dependencies
cumulus-pallet-dmp-queue = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
pallet-collator-selection = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }
parachain-info = { git = "https://github.com/purestake/cumulus", branch = "elois-jsonrpsee", default-features = false }

# Nimbus Dependencies
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
pallet-author-slot-filter = { path = "../../pallets/author-slot-filter", default-features = false }
pallet-author-inherent = { path = "../../pallets/author-inherent", default-features = false }


# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/purestake/polkadot", default-features = false , branch = "elois-jsonrpsee" }
polkadot-parachain = { git = "https://github.com/purestake/polkadot", default-features = false , branch = "elois-jsonrpsee" }
polkadot-runtime-common = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "elois-jsonrpsee" }
xcm = { git = "https://github.com/purestake/polkadot", default-features = false , branch = "elois-jsonrpsee" }
xcm-builder = { git = "https://github.com/purestake/polkadot", default-features = false , branch = "elois-jsonrpsee" }
xcm-executor = { git = "https://github.com/purestake/polkadot", default-features = false , branch = "elois-jsonrpsee" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"pallet-author-slot-filter/std",
	"pallet-author-inherent/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
