[package]
name = "parachain-template-runtime"
authors = [ "Anonymous" ]
description = "A FRAME-based Substrate Runtime, that demonstrates the Nimbus consensus framework."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/paritytech/cumulus/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = [ "derive" ] }
serde = { version = "1.0.119", optional = true, features = [ "derive" ] }
smallvec = "1.6.1"
hex-literal = "0.3.4"

# Local Dependencies
pallet-template = { path = "../pallets/template", default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-block-builder = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-core = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-inherents = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-io = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-offchain = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-runtime = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-session = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-std = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-transaction-pool = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
sp-version = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/PureStake/substrate", optional = true, default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-executive = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-support = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-system = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-system-benchmarking = { git = "https://github.com/PureStake/substrate", optional = true, default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
frame-system-rpc-runtime-api = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

## Substrate Pallet Dependencies
pallet-balances = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
pallet-randomness-collective-flip = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
pallet-session = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
pallet-sudo = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
pallet-timestamp = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
pallet-transaction-payment = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/PureStake/substrate", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead" }

# Cumulus dependencies
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26", default-features = false }

# Nimbus Dependencies
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
pallet-author-inherent = { path = "../../pallets/author-inherent", default-features = false }
pallet-author-slot-filter = { path = "../../pallets/author-slot-filter", default-features = false }


# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead-companion" }
polkadot-parachain = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead-companion" }
polkadot-runtime-common = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead-companion" }
xcm = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead-companion" }
xcm-builder = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead-companion" }
xcm-executor = { git = "https://github.com/PureStake/polkadot", default-features = false , branch = "notlesh-add-digest-to-benchmark-overhead-companion" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/PureStake/substrate", branch = "notlesh-add-digest-to-benchmark-overhead" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"pallet-author-inherent/std",
	"pallet-author-slot-filter/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"pallet-author-slot-filter/try-runtime",
]
